bluesky logo corrections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -233,7 +233,8 @@ hr {
   display: flex;
   flex-wrap: wrap;
   box-sizing: border-box;
-  align-items: stretch; }
+  align-items: stretch;
+}
   .row > * {
     box-sizing: border-box; }
   .row.gtr-uniform > * > :last-child {
@@ -1375,7 +1376,7 @@ ul.contact {
       text-transform: none !important;
       font-family: 'Font Awesome 5 Free';
       font-weight: 400; }
-    ul.contact li:before {
+    ul.contact li:before, i:before{
       color: #f56a6a;
       display: inline-block;
       font-size: 1.5em;
